# projectfina-api

./: CMakeLists.txt  Jenkinsfile  README.md
scripts/: rebuild.ps1  rebuild.sh
src/: CMakeLists.txt  projectfina-api.c  uo_http_util.c  uo_pg.c
src/conf/: projectfina-api.conf
src/include/: uo_http_util.h  uo_pg.h
src/include/v01/: groups.h  instruments.h  markets.h  notes.h  watchlists.h
src/v01/: groups.c  instruments.c  markets.c  notes.c  watchlists.c
systemd/system/: projectfina-api.service
